--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/tsannifer/listenUP#readme",
   "devDependencies": {
-    "express": "^4.15.4"
+    "babel": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "express": "^4.15.4",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
