--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Team repository for CSC 481 Project 2",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "debug-backend": "node api/index.js",
+    "debug-frontend": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "debug": "npm run debug-backend && npm run debug-frontend",
+    "build": "npm install && node node_modules/webpack/bin/webpack.js"
   },
   "repository": {
     "type": "git",
@@ -19,10 +23,19 @@
   "homepage": "https://github.com/tsannifer/listenUP#readme",
   "devDependencies": {
     "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "express": "^4.15.4",
+    "html-webpack-plugin": "^2.30.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2"
+  },
+  "dependencies": {
+    "express": "^4.15.4"
   }
 }
