--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "express": "^4.15.4",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "html-webpack-template": "^5.6.0",
     "react": "^15.6.1",
