--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
-    "express": "^4.15.4"
+    "body-parser": "^1.18.2",
+    "express": "^4.15.4",
+    "express-session": "^1.15.6",
+    "mongoose": "^4.12.3"
   }
 }
