--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "debug-backend": "node api/index.js",
+    "debug-backend": "concurrently \"node node_modules/sleep-ms/bin/sleepms.js 2000 && node api/index.js\" \"mongod\" ",
     "debug-frontend": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "debug": "npm run debug-backend && npm run debug-frontend",
+    "debug": "concurrently \"npm run debug-backend\" \"npm run debug-frontend\"",
     "build": "npm install && node node_modules/webpack/bin/webpack.js"
   },
   "repository": {
@@ -28,6 +28,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "concurrently": "^3.5.0",
     "css-loader": "^0.28.7",
     "express": "^4.15.4",
     "file-loader": "^1.1.5",
@@ -36,6 +37,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
+    "sleep-ms": "^2.0.1",
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2"
