--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "debug-backend": "concurrently \"node node_modules/sleep-ms/bin/sleepms.js 2000 && node api/index.js\" \"mongod\" ",
     "debug-frontend": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "debug": "concurrently \"npm run debug-backend\" \"npm run debug-frontend\"",
-    "build": "npm install && node node_modules/webpack/bin/webpack.js"
+    "build": "npm install && node node_modules/webpack/bin/webpack.js",
+    "build_production": "npm install && node node_modules/webpack/bin/webpack.js -p"
   },
   "repository": {
     "type": "git",
