--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.15.4",
     "express-session": "^1.15.6",
-    "mongoose": "^4.12.3"
+    "mongoose": "^4.12.3",
+    "react-audioplayer": "^0.3.1"
   }
 }
